deletedtracking ds_store and added a folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# folder that isn't to be tracked
+not_on_github/
+
+
 # pytype static type analyzer
 .pytype/
 
